feat: Implement Vulkan device, 3D model loading, and GPU instancing for rendering.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ set(SCENE_SOURCES
     src/Scenes/Basic/CubeScene.cpp
     src/Scenes/Basic/CameraTestScene.cpp
     src/Scenes/Basic/ModelLoadingScene.cpp
+    src/Scenes/Performance/InstancingScene.cpp
 )
 
 set(ALL_SOURCES
